--- a/scss/_orange-css.scss
+++ b/scss/_orange-css.scss
@@ -42,6 +42,7 @@ html {
 
   &.navbar-light,
   &.navbar-dark {
+    color: $brand-orange-white;
     background: $brand-orange-black;
   }
 
